...
          }}
        />
        <Tabs.Screen
          name="scan"
          options={{
            title: 'Lumeo',
            tabBarLabel: 'Scan QR',
            tabBarIcon: ({ size, color }) => <TabIcon icon="qr-code-outline" size={size} color={color} />,
          }}
        />
        <Tabs.Screen
          name="sessions"
          options={{
...
          }}
        />
        <Tabs.Screen
          name="profile"
          options={{
            title: 'Lumeo',
            tabBarLabel: 'Profile',
            tabBarIcon: ({ size, color }) => <TabIcon icon="person-circle-outline" size={size} color={color} />,
          }}
        />
      </Tabs>
    </>
  );
...
